Fix alignment of bookmark icon

--- a/client/css/linkedtv.css
+++ b/client/css/linkedtv.css
@@ -198,7 +198,7 @@ a {
   color: #CCC;
 }
 .episode .bookmark {
-  top: -10px;
+  top: -2px;
 }
 
 /* bookmarks */
